# reply-lab

./: README.md  ScreenCamera_2025-04-26-16-21-22.json  main.py  output.kml  pyproject.toml  regenerated.kml
back_end/: .env  main.py
back_end/modules/: __init__.py
back_end/modules/barcode_detection/: __init__.py
back_end/modules/path_generation/: utils.py
back_end/modules/prompt_processor/: llm_manager.py
data/: RoutePlanning.kmz
dji_exporter/: __main__.py  final.py  lib.py  test.py
dji_exporter/output/: Group14.kmz
examples/: colm.py
examples/output/: INFO.log.20250426-034317.30100  INFO.log.20250426-034610.8304
front_end/: tailwind.config.ts
front_end/app/: globals.css  layout.tsx  page.tsx
front_end/components/: drone-control-interface.tsx  message-renderer.tsx
front_end/components/ui/: code.tsx
front_end/lib/: api.ts  settings.ts
notebooks/: KMZ File Edit.ipynb
notebooks/.ipynb_checkpoints/: KMZ File Edit-checkpoint.ipynb
notebooks/path_gen/: SFM Gen.ipynb
notebooks/sfm/: SFM Gen.ipynb  database.db
notebooks/sfm/.ipynb_checkpoints/: pycolmap_notebook-checkpoint.ipynb
noteboook/: output.kml
noteboook/sfm/: SFM Gen.ipynb  pycolmap_notebook.ipynb
noteboook/sfm/sfm_output/: INFO.log.20250426-033735.22112  database.db-shm  database.db-wal
results/: Group14.kmz  template.kml
server/: main.py  test.py
server/middleware/: file_size.py
server/modules/barcode_detection/: detection.py  object_det_to_matching.py
server/output/: Group14.kmz  template.kml  waylines.wpml
uploads/output/: waylines.wpml
(+35 files in other folders)
