[project]
name = "makeathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "enlighten>=1.14.1",
    "fastapi>=0.115.12",
    "fastkml[lxml]>=1.1.0",
    "google-generativeai>=0.8.5",
    "laspy>=2.5.4",
    "matplotlib>=3.10.1",
    "notebook>=7.4.1",
    "numpy>=2.2.5",
    "open3d>=0.19.0",
    "openai>=1.76.0",
    "opencv-python>=4.11.0.86",
    "piexif>=1.1.3",
    "pycolmap>=3.11.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.23",
    "uvicorn[standard]>=0.34.2",
    "websocket>=0.2.1",
]
